# gemm

./: Cargo.toml  justfile
.github/workflows/: code-quality.yml  run-tests.yml
benches/: bench.rs  gemm.rs  lib.rs
gemm/: Cargo.toml
gemm-c32/: Cargo.toml
gemm-c32/src/: gemm.rs  microkernel.rs
gemm-c64/: Cargo.toml
gemm-c64/src/: gemm.rs  lib.rs  microkernel.rs
gemm-common/: Cargo.toml
gemm-common/src/: cache.rs  gemm.rs  gemv.rs  lib.rs  microkernel.rs  pack_operands.rs  simd.rs
gemm-f16/: Cargo.toml
gemm-f16/src/: gemm.rs  lib.rs  microkernel.rs
gemm-f32/: Cargo.toml
gemm-f32/src/: lib.rs  microkernel.rs
gemm-f64/: Cargo.toml
gemm-f64/src/: lib.rs  microkernel.rs
gemm/benches/: bench.rs
gemm/examples/: gemv_bench.rs
gemm/src/: gemm.rs  lib.rs
src/: cache.rs  gemm.rs  gemv.rs  gevv.rs  lib.rs  microkernel.rs  pack_operands.rs  simd.rs
