[package]
name = "gemm"
version = "0.11.0"
edition = "2021"
authors = ["sarah <>"]
description = "Playground for matrix multiplication algorithms"
readme = "README.md"
repository = "https://github.com/kitegi/gemm/"
license = "MIT"
keywords = ["linear-algebra"]

[dependencies]
lazy_static = "1.4"
raw-cpuid = "10.3"
seq-macro = "0.3"
dyn-stack = "0.8"
num-traits = "0.2"
num-complex = "0.4"
rayon = { version = "1.5", optional = true }

[features]
default = ["std"]
std = []
nightly = []

[dev-dependencies]
criterion = "0.3"
rand = "0.8.5"
nalgebra = "0.31.0"
assert_approx_eq = "1.1.0"
rayon = "1.5"

[[bench]]
name = "bench"
harness = false
