[workspace]
members = ["gemm", "gemm-common", "gemm-f16", "gemm-f32", "gemm-f64", "gemm-c32", "gemm-c64"]
resolver = "2"

[workspace.dependencies]
lazy_static = "1.4"
raw-cpuid = "10.7"
seq-macro = "0.3"
dyn-stack = "0.9"
num-traits = "0.2"
num-complex = "0.4"
rayon = "1.7"
paste = "1.0"

[profile.dev]
opt-level = 3

[profile.release-with-debug]
inherits = "release"
debug = true
