[workspace]
members = ["gemm", "gemm-common", "gemm-f16", "gemm-f32", "gemm-f64", "gemm-c32", "gemm-c64"]
resolver = "2"

[workspace.dependencies]
once_cell = { version = "1.18", default-features = false }
seq-macro = "0.3"
paste = "1.0"
raw-cpuid = { version = "10.7", default-features = false }
dyn-stack = { version = "0.10", default-features = false }
num-traits = { version = "0.2", default-features = false }
num-complex = { version = "0.4", default-features = false }
rayon = "1"
half = { version = "2.3", default-features = false, features = ["num-traits", "bytemuck"] }

[profile.dev]
opt-level = 3
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false
