[package]
name = "gemm-c32"
version = "0.16.1"
edition = "2021"
authors = ["sarah <>"]
description = "Playground for matrix multiplication algorithms"
readme = "../README.md"
repository = "https://github.com/sarah-ek/gemm/"
license = "MIT"
keywords = ["linear-algebra"]

[dependencies]
lazy_static = { workspace = true }
raw-cpuid = { workspace = true }
seq-macro = { workspace = true }
dyn-stack = { workspace = true }
num-traits = { workspace = true }
num-complex = { workspace = true }
paste = { workspace = true }

gemm-common = { version = "0.16.1", default-features = false, path = "../gemm-common" }

[features]
default = ["std", "rayon"]
std = ["gemm-common/std"]
nightly = ["gemm-common/nightly"]
rayon = ["std", "gemm-common/rayon"]
