[package]
name = "gemm-common"
version = "0.16.1"
edition = "2021"
authors = ["sarah <>"]
description = "Playground for matrix multiplication algorithms"
readme = "../README.md"
repository = "https://github.com/sarah-ek/gemm/"
license = "MIT"
keywords = ["linear-algebra"]

[dependencies]
lazy_static = { workspace = true }
raw-cpuid = { workspace = true }
seq-macro = { workspace = true }
dyn-stack = { workspace = true }
num-traits = { workspace = true }
num-complex = { workspace = true }
rayon = { workspace = true, optional = true }
paste = { workspace = true }
pulp = { version = "0.15.0", default-features = false }
bytemuck = "1.14.0"
half = { workspace = true }

[features]
default = ["std", "rayon"]
std = ["pulp/std"]
nightly = ["pulp/nightly"]
wasm-simd128-enable = []
rayon = ["dep:rayon", "std"]
