[package]
name = "gemm-common"
version = "0.16.15"
edition = "2021"
authors = ["sarah <>"]
description = "Playground for matrix multiplication algorithms"
readme = "../README.md"
repository = "https://github.com/sarah-ek/gemm/"
license = "MIT"
keywords = ["linear-algebra"]

[dependencies]
raw-cpuid = { workspace = true }
seq-macro = { workspace = true }
once_cell = { workspace = true, default-features = false, features = ["race", "alloc"] }
dyn-stack = { workspace = true, default-features = false }
num-traits = { workspace = true, default-features = false }
num-complex = { workspace = true, default-features = false }
half = { workspace = true, default-features = false, optional=true }
rayon = { workspace = true, optional = true }
paste = { workspace = true }
pulp = { version = "0.16", default-features = false }
bytemuck = "1.14"

[features]
default = ["std", "rayon", "f16"]
std = ["pulp/std", "dyn-stack/std", "once_cell/std"]
nightly = ["pulp/nightly"]
wasm-simd128-enable = []
rayon = ["dep:rayon", "std"]
f16 = ["half"]
