[package]
name = "gemm-f16"
version = "0.16.1"
edition = "2021"
authors = ["sarah <>"]
description = "Playground for matrix multiplication algorithms"
readme = "../README.md"
repository = "https://github.com/sarah-ek/gemm/"
license = "MIT"
keywords = ["linear-algebra"]

[dependencies]
lazy_static = { workspace = true }
raw-cpuid = { workspace = true }
seq-macro = { workspace = true }
dyn-stack = { workspace = true }
num-traits = { workspace = true }
num-complex = { workspace = true }
paste = { workspace = true }
rayon = { workspace =true, optional = true }

gemm-common = { version = "0.16.1", default-features = false, path = "../gemm-common" }
gemm-f32 = { version = "0.16.1", default-features = false, path = "../gemm-f32" }
half = { workspace = true }

[features]
default = ["std", "rayon"]
std = ["gemm-common/std", "gemm-f32/std"]
nightly = ["gemm-common/nightly", "gemm-f32/nightly"]
rayon = ["dep:rayon", "std", "gemm-common/rayon", "gemm-f32/rayon"]
