[package]
name = "gemm-f64"
version = "0.14.0"
edition = "2021"
authors = ["sarah <>"]
description = "Playground for matrix multiplication algorithms"
readme = "README.md"
repository = "https://github.com/sarah-ek/gemm/"
license = "MIT"
keywords = ["linear-algebra"]

[dependencies]
lazy_static = { workspace = true }
raw-cpuid = { workspace = true }
seq-macro = { workspace = true }
dyn-stack = { workspace = true }
num-traits = { workspace = true }
num-complex = { workspace = true }
rayon = { workspace = true }
paste = { workspace = true }

gemm-common = { version = "0.14", path = "../gemm-common" }

[features]
default = ["std"]
std = []
nightly = []
