[package]
name = "gemm"
version = "0.14.6"
edition = "2021"
authors = ["sarah <>"]
description = "Playground for matrix multiplication algorithms"
readme = "../README.md"
repository = "https://github.com/sarah-ek/gemm/"
license = "MIT"
keywords = ["linear-algebra"]

[dependencies]
lazy_static = { workspace = true }
raw-cpuid = { workspace = true }
seq-macro = { workspace = true }
dyn-stack = { workspace = true }
num-traits = { workspace = true }
num-complex = { workspace = true }
rayon = { workspace = true }
paste = { workspace = true }

gemm-common = { version = "0.14", path = "../gemm-common" }
gemm-f32 = { version = "0.14", path = "../gemm-f32" }
gemm-f64 = { version = "0.14", path = "../gemm-f64" }
gemm-c32 = { version = "0.14", path = "../gemm-c32" }
gemm-c64 = { version = "0.14", path = "../gemm-c64" }

[features]
default = ["std"]
std = []
nightly = ["gemm-common/nightly", "gemm-f32/nightly", "gemm-f64/nightly", "gemm-c32/nightly", "gemm-c64/nightly"]

[dev-dependencies]
criterion = "0.4"
rand = "0.8.5"
nalgebra = "0.32.2"
assert_approx_eq = "1.1.0"
rayon = "1.7"

[[bench]]
name = "bench"
harness = false
